  . Fixed bug #71539 (Memory error on $arr[$a] =& $arr[$b] if RHS rehashes)
    (Dmitry, Nikita)
  . Added new constant PHP_FD_SETSIZE. (cmb)
  . Added optind parameter to getopt(). (as)
  . Added PHP to SAPI error severity mapping for logs. (Martin Vobruba)
  . Fixed bug #71911 (Unable to set --enable-debug on building extensions by
    phpize on Windows). (Yuji Uchiyama)

- COM:
  . Fixed bug #72569 (DOTNET/COM array parameters broke in PHP7). (Anatol)

- Date:
  . Fixed bug #66836 (DateTime::createFromFormat 'U' with pre 1970 dates fails
    parsing). (derick)

- Filter:
  . Fixed bug #71745 (FILTER_FLAG_NO_RES_RANGE does not cover whole 127.0.0.0/8
    range). (bugs dot php dot net at majkl578 dot cz)

- FPM:
  . Fixed bug #72575 (using --allow-to-run-as-root should ignore missing user).
    (gooh)

- Intl:
  . Partially fixed #72506 (idn_to_ascii for UTS #46 incorrect for long domain
    names). (cmb)

- Mbstring:
  . Deprecated mb_ereg_replace() eval option. (Rouven Weßling, cmb)

- MCrypt:
  . Deprecated ext/mcrypt. (Scott Arciszewski, cmb)

- Opcache:
  . Fixed bug #72590 (Opcache restart with kill_all_lockers does not work).
    (Keyur)

- PDO_pgsql:
  . Fixed bug #70313 (PDO statement fails to throw exception). (Matteo)
  . Fixed bug #72570 (Segmentation fault when binding parameters on a query
    without placeholders). (Matteo)

- Pcntl
  . Implemented asynchronous signal handling without TICKS. (Dmitry)
  . Added pcntl_signal_get_handler() that returns the current signal handler
    for a particular signal. Addresses FR #72409. (David Walker)

- SimpleXML:
  . Fixed bug #72588 (Using global var doesn't work while accessing SimpleXML
    element). (Laruence)

- Tidy:
  . Implemented support for libtidy 5.0.0 and above. (Michael Orlitzky, Anatol)

- Wddx:
  . Fixed bug #72564 (boolean always deserialized as "true") (Remi)

07 Jul 2016, PHP 7.1.0alpha3

- Core:
  . Implemented RFC: Iterable. (Aaron Piotrowski)